--- a/build.gradle
+++ b/build.gradle
@@ -8,9 +8,10 @@ repositories {
 
 dependencies {
     testImplementation (
-            "com.codeborne:selenide:6.3.5",
-            "org.junit.jupiter:junit-jupiter:5.8.2")
-}
+            "com.codeborne:selenide:6.12.4",
+            "org.junit.jupiter:junit-jupiter:5.9.2",
+            "org.slf4j:slf4j-simple:2.0.7")
+    }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8'
